Blog pages added

--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-md-6 m-auto text-center">
           <h1>Our Services</h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
+          <p>Find long tail keywords with low SEO difficulty: Iska London is the only keyword research tool in the universe you will ever need.</p>
         </div>
       </div>
     </div>
@@ -71,26 +71,25 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-header bg-dark text-white">
-              <h3>Basic</h3>
+              <h3>Save ~40 %</h3>
             </div>
             <div class="card-body">
-              <h4 class="card-title">£59.99/Month</h4>
+              <h4 class="card-title">with annual plans</h4>
               <p class="card-text"> </p>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature One
+                   Keyword lookups / 24 h
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Two
+                  Keyword suggestions
+                </li>
+                <li class="list-group-item"> Competitor keywords
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-times"></i> Feature Three
+                   Tracked keywords
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-times"></i> Feature Four
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-times"></i> Feature Five
+                  Simultaneous logins
                 </li>
               </ul>
               <a href="#" class="btn btn-danger btn-block mt-2">Get It</a>
@@ -103,26 +102,26 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-header bg-dark text-white">
-              <h3>Advance</h3>
+              <h3>Basic</h3>
             </div>
             <div class="card-body">
               <h4 class="card-title">£99.99/Month</h4>
               <p class="card-text"> </p>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature One
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Two
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Three
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-times"></i> Feature Four
+                  <i class="fas fa-times"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-times"></i> Feature Five
+                  <i class="fas fa-times"></i> 
                 </li>
               </ul>
               <a href="#" class="btn btn-danger btn-block mt-2">Get It</a>
@@ -142,19 +141,19 @@
               <p class="card-text"> </p>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature One
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Two
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Three
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Four
+                  <i class="fas fa-check"></i> 
                 </li>
                 <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Five
+                  <i class="fas fa-check"></i> 
                 </li>
               </ul>
               <a href="#" class="btn btn-danger btn-block mt-2">Get It</a>
