more images added

--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
   <!-- STAFF -->
   <section id="staff" class="py-5 text-center bg-dark text-white">
     <div class="container">
-      <h1>Our Staff</h1>
+      <h1>Our Team</h1>
       <hr>
       <div class="row">
         <div class="col-md-3">
