--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Nav-bar -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="https://www.iska.co.uk" target="_blank"" class="navbar-brand">Iska London</a>
+      <a href="https://www.iska.co.uk" target="_blank" class="navbar-brand">Iska London</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -65,8 +65,8 @@
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-center mb-5">
-              <h1 class="display-3"> Launch and promote </h1>
-              <p class="lead">Launch and promote your Amazon products directly within Iska London. 
+              <h1 class="display-3 text-secondary"> Launch and promote </h1>
+              <p class="lead text-danger">Launch and promote your Amazon products directly within Iska London. 
                 Drive sales through targeted customer email outreach and promotions</p>
               <a href="contact.html" class="btn btn-danger btn-lg">Sign Up Free</a>
             </div>
@@ -76,8 +76,8 @@
         <div class="carousel-item carousel-image-2">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="display-3">Products Reasearch </h1>
-              <p class="lead">Find high potential products to start dominating on Amazon.</p>
+              <h1 class="display-3 text-dark">Products Reasearch </h1>
+              <p class="lead text-light">Find high potential products to start dominating on Amazon.</p>
               <a href="contact.html" class="btn btn-primary btn-lg">Sign Up Now</a>
             </div>
           </div>
@@ -248,14 +248,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 align-self-center">
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet
-            blanditiis incidunt iusto corrupti illum
-            cum laudantium ex sequi amet.</p>
+          <h3>What We Are</h3>
+          <p>ISKA London is the most extensive database of searches from real Amazon shoppers. Since 2012, we’ve collected over 1.6 billion keywords and helped nearly 100,000 entrepreneurs grow their businesses.</p>
           <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
-          <img src="img/laptop.png" alt="" class="img-fluid">
+          <img src="img/Selling_on_amazon_2.png" alt="" class="img-fluid">
         </div>
       </div>
     </div>
