--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <!-- Nav-bar -->
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container">
-    <a href="https://www.iska.co.uk" target="_blank"" class="navbar-brand">Iska London</a>
+    <a href="https://www.iska.co.uk" target="_blank" class="navbar-brand">Iska London</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
     </button>
