--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Boot-Strap-Theme</title>
+  <title>Keyword-tracker</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <!-- Nav-bar -->
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container">
-    <a href="https://www.iska.co.uk" target="_blank"class="navbar-brand">Iska London</a>
+    <a href="index.html" target="_blank"class="navbar-brand">Iska London</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
     </button>
