--- a/contact.html
+++ b/contact.html
@@ -23,33 +23,33 @@
 <body>
   <header>
     <!-- Nav-bar -->
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <div class="container">
-    <a href="index.html" target="_blank" class="navbar-brand">Iska London</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a href="index.html" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a href="services.html" class="nav-link">Services</a>
-        </li>
-        <li class="nav-item">
-          <a href="blog.html" class="nav-link">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link">Contact</a>
-        </li>
-      </ul>
+<nav class="navbar navbar-expand-sm navbar-dark bg-info fixed-top">
+    <div class="container">
+      <a href="index.html" target="_blank" class="navbar-brand">Iska London</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a href="index.html" class="nav-link text-white">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link text-white">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="services.html" class="nav-link text-white">Services</a>
+          </li>
+          <li class="nav-item">
+            <a href="blog.html" class="nav-link text-white">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link text-white">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 </header>
 
 <!-- PAGE HEADER -->
