Blog links changed

--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
 
                     Last week, Amazon announced they would start suppressing listings from search results that do not comply with their guidelines. While Amazon has explained their methodology a little more in depth, 
 
-                    <a class="btn ctabtn btn-primary" href="https://www.iska.co.uk/"> Read more </a>
+                    <a class="btn ctabtn btn-primary" href="about.html"> Read more </a>
 
                   </p>
                 </div>
@@ -98,7 +98,7 @@
 
                     While some sellers treat Key Product Features (aka bullet points) and the Description the same, Amazon offers specific recommendations for each section. Keywords should flow naturally within the content, but the type of keywords and styles will differ.
 
-                    <a class="btn ctabtn btn-primary" href="https://www.iska.co.uk/"> Read more </a>
+                    <a class="btn ctabtn btn-primary" href="about.html"> Read more </a>
 
                   </p>
                 </div>
@@ -116,7 +116,7 @@
 
                     This section is limited to 250 bytes. A byte corresponds 1:1 for alphanumeric characters, and becomes variable when dealing with more complex characters like letters with umlauts, or Japanese or Chinese characters.
 
-                    <a class="btn ctabtn btn-primary" href="https://www.iska.co.uk/"> Read more </a>
+                    <a class="btn ctabtn btn-primary" href="about.html"> Read more </a>
 
                   </p>
                 </div>
@@ -183,6 +183,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
 
   <script>
