--- a/services.html
+++ b/services.html
@@ -396,10 +396,41 @@
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
 
+<script>
+    // Get the current year for the copyright
+      $('#year').text(new Date().getFullYear());
+  
+      // Configure Slider
+      $('.carousel').carousel({
+        interval: 6000,
+        pause: 'hover'
+      });
+  
+      // Lightbox Init
+      $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+        event.preventDefault();
+        $(this).ekkoLightbox();
+      });
+  
+      // Video Play
+      $(function () {
+        // Auto play modal video
+        $(".video").click(function () {
+          var theModal = $(this).data("target"),
+            videoSRC = $(this).attr("data-video"),
+            videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+          $(theModal + ' iframe').attr('src', videoSRCauto);
+          $(theModal + ' button.close').click(function () {
+            $(theModal + ' iframe').attr('src', videoSRC);
+          });
+        });
+      });
+  </script>
+  
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
-
+  
     $('.slider').slick({
       infinite: true,
       slideToShow: 1,
