Blog images added

--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
           <div class="col">
             <div class="card-columns">
               <div class="card">
-                <img src="https://source.unsplash.com/random/300x200" alt="" class="img-fluid card-img-top">
+                <img src="img/Blog-1.jpg" alt="" class="img-fluid card-img-top">
                 <div class="card-body">
                   <h4 class="card-title">Blog Post One</h4>
                   <small class="text-muted">Written by Raj on 05/20</small>
@@ -89,7 +89,7 @@
             
 
               <div class="card">
-                <img src="https://source.unsplash.com/random/301x200" alt="" class="img-fluid card-img-top">
+                <img src="img/Blog-2.jpg" alt="" class="img-fluid card-img-top">
                 <div class="card-body">
                   <h4 class="card-title">Blog Post Two</h4>
                   <small class="text-muted">Written by Raj on 05/22</small>
@@ -107,7 +107,7 @@
           
 
               <div class="card">
-                <img src="https://source.unsplash.com/random/302x200" alt="" class="img-fluid card-img-top">
+                <img src="img/Blog-3.jpg" alt="" class="img-fluid card-img-top">
                 <div class="card-body">
                   <h4 class="card-title">Blog Post Three</h4>
                   <small class="text-muted">Written by Raj on 05/23</small>
