Blog images added

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             Please input valid email ID
           </div>
 
-          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1" value="validate">Submit</button>
+          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-cente" value="validate">Submit</button>
 
         </form>
 
