--- a/services.html
+++ b/services.html
@@ -184,7 +184,7 @@
     <div class="card-header" id="headingEight">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -199,7 +199,7 @@
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -214,7 +214,7 @@
     <div class="card-header" id="headingSix">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -244,7 +244,7 @@
     <div class="card-header" id="headingSeven">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -261,7 +261,7 @@
     <div class="card-header" id="headingFour">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -276,7 +276,7 @@
     <div class="card-header" id="headingFive">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -388,7 +388,7 @@
             Please input valid email ID
           </div>
 
-          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1" value="validate">Submit</button>
+          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-center" value="validate">Submit</button>
 
         </form>
         
