--- a/contact.html
+++ b/contact.html
@@ -245,7 +245,7 @@
             Please input valid email ID
           </div>
 
-          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1" value="validate">Submit</button>
+          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-center" value="validate">Submit</button>
 
         </form>
         </div>
@@ -270,7 +270,7 @@
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
         <button class="btn btn-link text-white" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <h4> What is Iska London </h4>
+          <h4 text-center> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -287,7 +287,7 @@
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -302,7 +302,7 @@
     <div class="card-header" id="headingSix">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -318,7 +318,7 @@
     <div class="card-header" id="headingFour">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
@@ -333,7 +333,7 @@
     <div class="card-header" id="headingFive">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-          <h4> What is Iska London </h4>
+          <h4 class="text-center"> What is Iska London </h4>
         </button>
       </h5>
     </div>
