Blog images added

--- a/blog.html
+++ b/blog.html
@@ -129,7 +129,7 @@
         </div>
       </div>
     </section>
-  
+
   <!-- PAGE HEADER -->
 
   <br/>
@@ -166,7 +166,8 @@
             Please input valid email ID
           </div>
 
-          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-center" value="validate">Submit</button>
+          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-center" value="validate"><h6 class = text-center> Submit </h6>
+          </button>
 
         </form>
         
