Blog images added

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+ </nav>
 </header>
   <!-- PAGE HEADER -->
   <header id="page-header">
@@ -261,7 +261,8 @@
             Please input valid email ID
           </div>
 
-          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-cente" value="validate">Submit</button>
+           <button type="submit" class="btn btn-outline-danger btn-block col-7 col-md-4 col-lg-7 ml-3 form-control" value="validate"><h6 class = text-center> Submit </h6>
+          </butto>
 
         </form>
 
