--- a/contact.html
+++ b/contact.html
@@ -245,7 +245,8 @@
             Please input valid email ID
           </div>
 
-          <button type="submit" class="btn btn-danger text-uppercase sbmt-btn col-3 col-md-2 col-lg-4 ml-1 text-center" value="validate">Submit</button>
+          <button type="submit" class="btn btn-outline-danger btn-block col-7 col-md-4 col-lg-7 ml-3 form-control" value="validate"><h6 class = text-center> Submit </h6>
+          </button>
 
         </form>
         </div>
