--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@
           </div>
 
            <button type="submit" class="btn btn-outline-danger btn-block col-7 col-md-4 col-lg-7 ml-3 form-control" value="validate"><h6 class = text-center> Submit </h6>
-          </butto>
+          </button>
 
         </form>
 
