--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                              <!-- -->
                             <div class="col-md-6 py-3">
                               <div class="form-group">
-                                <input type="text" class="form-control" required="" maxlength="15" minlength="4" id="text" pattern="^[a-zA-Z0-9]*$" placeholder="First Name">
+                                <input type="text" class="form-control border border-dark" required="" maxlength="15" minlength="4" id="text" pattern="^[a-zA-Z0-9]*$" placeholder="First Name">
                                   <div class="valid-feedback feedback-pos">
                                     Looks good!
                                   </div>
@@ -108,7 +108,7 @@
 
                         <div class="col-md-6 py-3">
                           <div class="form-group">
-                            <input type="text" class="form-control" required="" maxlength="15" minlength="4" id="text" pattern="^[a-zA-Z0-9]*$" placeholder="Last Name">
+                            <input type="text" class="form-control border border-dark" required="" maxlength="15" minlength="4" id="text" pattern="^[a-zA-Z0-9]*$" placeholder="Last Name">
                               <div class="valid-feedback feedback-pos">
                                 Looks good!
                               </div>
@@ -122,7 +122,7 @@
 
                       <div class="col-md-6 py-3">
                         <div class="form-group">
-                          <input type="email" name="email" placeholder="Your email ID.." class="form-control" id="email" maxlength="49" minlength=""pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                          <input type="email" name="email" placeholder="Your email ID.." class="form-control border border-dark" id="email" maxlength="49" minlength=""pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                             <div class="valid-feedback feedback-pos">
                               Looks good!
                             </div>
@@ -135,7 +135,7 @@
 
                       <div class="col-md-6 py-3">
                         <div class="form-group">
-                          <input type="text" class="form-control" required="" maxlength="20" minlength="1" id="text" pattern="^[0-9]*$" placeholder="Phone Number">
+                          <input type="text" class="form-control border border-dark" required="" maxlength="20" minlength="1" id="text" pattern="^[0-9]*$" placeholder="Phone Number">
                           <div class="valid-feedback feedback-pos">
                             Looks good!
                           </div>
