--- a/contact.html
+++ b/contact.html
@@ -329,13 +329,14 @@
       <div class="card-header" id="headingSix">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-            <h4 class="text-center"> What is Iska London </h4>
+            <h4 class="text-center"> How frequently is data updated? </h4>
           </button>
         </h5>
       </div>
       <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
         <div class="card-body">
-          <p>Iska London compiles and monitors keyword searches and search volume data from buyers worldwide. This allows us to derive unique market insights; and help sellers boost their product visibility and discover new opportunities. <br><br>Our goal is simple: To help online sellers, like you, choose the best keywords for your product listings and ppc ad campaigns so you can reach more customers.</p> 
+          <p>Keyword data on Iska London is updated at least once a month. 
+            Though we are always collecting data, we do not publish new data on our site until we are confident in the accuracy of the information.</p> 
         </div>
       </div>
     </div>
@@ -345,13 +346,16 @@
       <div class="card-header" id="headingFour">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            <h4 class="text-center"> What is Iska London </h4>
+            <h4 class="text-center"> How do we get this data? </h4>
           </button>
         </h5>
       </div>
       <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
         <div class="card-body">
-           <p>Iska London compiles and monitors keyword searches and search volume data from buyers worldwide. This allows us to derive unique market insights; and help sellers boost their product visibility and discover new opportunities. <br><br>Our goal is simple: To help online sellers, like you, choose the best keywords for your product listings and ppc ad campaigns so you can reach more customers.</p>  
+           <p>All Iska London data comes from real buyer searches on marketplaces, like Amazon and Walmart.com. 
+            We look at the relationships between keywords and gather information across hundreds of millions of searches on these online marketplaces. 
+            This data is then analyzed using our custom algorithm to estimate the number of searches performed for each search term. 
+            Doing this gives us a measure of the popularity of different searches from a buyer’s point of view.</p>  
         </div>
       </div>
     </div>
@@ -360,13 +364,26 @@
       <div class="card-header" id="headingFive">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-            <h4 class="text-center"> What is Iska London </h4>
+            <h4 class="text-center"> What's next for Iska London? </h4>
           </button>
         </h5>
       </div>
       <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
         <div class="card-body">
-           <p>Iska London compiles and monitors keyword searches and search volume data from buyers worldwide. This allows us to derive unique market insights; and help sellers boost their product visibility and discover new opportunities. <br><br>Our goal is simple: To help online sellers, like you, choose the best keywords for your product listings and ppc ad campaigns so you can reach more customers.</p>  
+           <p>We're working on plenty of interesting new features for future versions of Iska London:
+            
+            <br>
+
+              • Search data from more countries<br>
+              • Search data from eBay, Etsy, Newegg, Shopify and Alibaba<br>
+              • Content Maximizer tool <br>
+              • Chrome Browser extension <br>
+              • Competition and seasonality data <br>
+              • Insight into market trends and opportunities <br>
+
+            We love getting feedback from our customers. Please do not hesitate to
+            <a href="contact.html" class="text-danger"> Contact Us </a> 
+            with product suggestions that would be useful to your business.</p>  
         </div>
       </div>
     </div>
