--- a/contact.html
+++ b/contact.html
@@ -314,7 +314,7 @@
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            <h4 class="text-center"> What is Iska London </h4>
+            <h4 class="text-center"> What is<br>Iska London </h4>
           </button>
         </h5>
       </div>
@@ -329,7 +329,7 @@
       <div class="card-header" id="headingSix">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-            <h4 class="text-center"> How frequently is data updated? </h4>
+            <h4 class="text-center"> How frequently<br>is data updated? </h4>
           </button>
         </h5>
       </div>
@@ -346,7 +346,7 @@
       <div class="card-header" id="headingFour">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            <h4 class="text-center"> How do we get this data? </h4>
+            <h4 class="text-center"> How do we<br>get this data? </h4>
           </button>
         </h5>
       </div>
@@ -364,7 +364,7 @@
       <div class="card-header" id="headingFive">
         <h5 class="mb-0">
           <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-            <h4 class="text-center"> What's next for Iska London? </h4>
+            <h4 class="text-center"> What's next<br>for Iska London? </h4>
           </button>
         </h5>
       </div>
