--- a/services.html
+++ b/services.html
@@ -175,7 +175,8 @@
     <div class="container">
       <h1 class="text-center">Frequently Asked Questions</h1>
       <hr>
-      <div class="row justify-content-center">
+      <div class="row">
+
         <div class="col-md-6"> <!-- Part One -->
 
   <div id="accordion">
@@ -185,7 +186,7 @@
     <div class="card-header" id="headingEight">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-          <h4 class="text-center"> What is Iska London? </h4>
+          <h4 class="text-center"> What is Iska<br>London? </h4>
         </button>
       </h5>
     </div>
@@ -216,7 +217,7 @@
     <div class="card-header" id="headingSix">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-          <h4 class="text-center"> How do we get this <br> data? </h4>
+          <h4 class="text-center"> How do we <br> get this <br> data? </h4>
         </button>
       </h5>
     </div>
@@ -243,7 +244,7 @@
     <div class="card-header" id="headingSeven">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-          <h4 class="text-center"> Does this data represent<br>searches in the US <br> or worldwide?</h4>
+          <h4 class="text-center"> Does this<br>data represent<br>searches in<br>the US or <br>worldwide?</h4>
         </button>
       </h5>
     </div>
@@ -262,7 +263,7 @@
     <div class="card-header" id="headingFour">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-          <h4 class="text-center"> What's next for Iska London? </h4>
+          <h4 class="text-center"> What's next for<br>Iska London? </h4>
         </button>
       </h5>
     </div>
@@ -291,7 +292,7 @@
     <div class="card-header" id="headingFive">
       <h5 class="mb-0">
         <button class="btn btn-link text-white collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-          <h4 class="text-center"> How reliable and accurate is <br>  Iska London? </h4>
+          <h4 class="text-center"> How reliable<br>and accurate is<br>Iska London? </h4>
         </button>
       </h5>
     </div>
