--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
             <a href="contact.html" class="btn btn-outline-danger btn-lg">Get Started</a>
           </div>
           <div class="col-md-6">
+            <div class="col">
             <img src="img/Selling_on_amazon.png" alt="" class="img-fluid">
+            </div>
           </div>
         </div>
       </div>
@@ -249,7 +251,9 @@
           <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
+          <div class="col">
           <img src="img/Selling_on_amazon_2.png" alt="" class="img-fluid">
+          </div>
         </div>
       </div>
     </div>
