--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
         <div class="col">
           
-            <h1>Are You Ready To Get Started?</h1>
-            <p class="d-none d-md-block">THE LARGEST DATABASE OF SHOPPER SEARCH TRENDS </p>
+            <h2>Are You Ready To Get Started?</h2>
+            <p class="">THE LARGEST DATABASE OF SHOPPER SEARCH TRENDS </p>
           </div>
 
       </div> <!-- row -->
