--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
       <div class="container">
       <div class="row">
 
-        <div class="col">
+        <div class="col py-4">
           
-            <h2>Are You Ready To Get Started?</h2>
-            <p class="">THE LARGEST DATABASE OF SHOPPER SEARCH TRENDS </p>
+            <h2 class="py-4">Are You Ready To Get Started?</h2>
+            <h4 class="">THE LARGEST DATABASE OF SHOPPER SEARCH TRENDS </h4>
           </div>
 
       </div> <!-- row -->
@@ -165,19 +165,19 @@
 
         <div class="form-check form-check-inline">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="keyword" class="form-check-input"> 
-        <label for="inlineRadio1" class="form-check-label nav justify-content-center" style="font-size: 1.8rem !important;"><b>KEYWORD RESEARCH</b></label>
+        <label for="inlineRadio1" class="form-check-label nav justify-content-center" style="font-size: 1.8rem !important;"><h3>KEYWORD RESEARCH</h3></label>
         </div> 
 
         <div class="form-check form-check-inline">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="asin" class="form-check-input"> 
-        <label for="inlineRadio2" class="form-check-label nav justify-content-center" style="font-size: 1.8rem !important;"><b>ASIN TRACKER</b></label> 
+        <label for="inlineRadio2" class="form-check-label nav justify-content-center" style="font-size: 1.8rem !important;"><h3>ASIN TRACKER</h3></label> 
         <span class="badge badge-pill badge-success" style="margin-top: -20px;">New</span>
         </div> 
 
         <div class="input-group input-group-append">
         <input type="text" placeholder="Enter word or phrase" required="required" class="form-control"> 
           <button class="btn btn-accent"> 
-            <a href="#"> <span> <i class="fas fa-search"> </i> <b>&nbsp; search</b> </span> </a> </button> 
+            <a href="#"> <span> <i class="fas fa-search"> </i> <h8>&nbsp; search</h8> </span> </a> </button> 
          </div>
  
     </nav>
