--- a/index.html
+++ b/index.html
@@ -137,33 +137,31 @@
 </section>
 
   <!-- HOME HEADING SECTION -->
-  <section id="home-heading">
-    <div class="dark-overlay">
+ 
       <div class="container">
       <div class="row">
 
-        <div class="col py-4">
+        <div class="col">
           
-            <h2 class="py-4">Are You Ready To Get Started?</h2>
-            <h4 class="">THE LARGEST DATABASE OF SHOPPER SEARCH TRENDS </h4>
+            <h3 class="">Are You Ready To Get Started?</h3>
+            <h6 class="">THE LARGEST DATABASE OF SHOPPER SEARCH TRENDS </h>
           </div>
 
       </div> <!-- row -->
   </div> <!-- container -->
- </div> <!-- Overlay -->
-</section>
+
         
-<br>
+
 
 
  
-<section id="home-heading" class="py-5">
+<section id="home-heading" class="">
  <div class="dark-overlay">
   <div class="container">
     <div class="row">
     <nav id="search-form" class="nav d-flex justify-content-center mb-5">
 
-        <div class="form-check form-check-inline">
+        <div class="form-check form-check-inline py-4">
         <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="keyword" class="form-check-input"> 
         <label for="inlineRadio1" class="form-check-label nav justify-content-center" style="font-size: 1.8rem !important;"><h3>KEYWORD RESEARCH</h3></label>
         </div> 
@@ -174,7 +172,7 @@
         <span class="badge badge-pill badge-success" style="margin-top: -20px;">New</span>
         </div> 
 
-        <div class="input-group input-group-append">
+        <div class="input-group input-group-append mb-6">
         <input type="text" placeholder="Enter word or phrase" required="required" class="form-control"> 
           <button class="btn btn-accent"> 
             <a href="#"> <span> <i class="fas fa-search"> </i> <h8>&nbsp; search</h8> </span> </a> </button> 
