--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="input-group input-group-append mb-6">
         <input type="text" placeholder="Enter word or phrase" required="required" class="form-control"> 
           <button class="btn btn-accent"> 
-            <a href="#"> <span> <i class="fas fa-search"> </i> <h8>&nbsp; search</h8> </span> </a> </button> 
+            <a href="#"> <span> <i class="fas fa-search"> </i>  </span> </a> </button> 
          </div>
  
     </nav>
