--- a/index.html
+++ b/index.html
@@ -205,6 +205,41 @@
 
 <!-- NEWSLETTER -->
 
+   <NEWSLETTER>
+  <section id="" class="text-center p-5 bg-dark text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h4>Sign Up For Our Newsletter</h4>
+          <p>Get the latest content to your inbox every month. No spam, we hate it too </p>
+
+
+          <form class=" form-inline justify-content-center row position-relative flex-column needs-validation" novalidate>
+
+         
+
+          <input type="email" name="email" placeholder="Your email ID.." class="email white col-7 col-md-4 col-lg-7 ml-3 form-control" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+
+          <br>
+
+          <div class="valid-feedback feedback-pos">
+            Looks good!
+          </div>
+
+          <div class="invalid-feedback feedback-pos">
+            Please input valid email ID
+          </div>
+
+          <button type="submit" class="btn btn-outline-danger btn-block col-7 col-md-4 col-lg-7 ml-3 form-control" value="validate"><h6 class = text-center> Submit </h6>
+          </button>
+
+        </form>
+        
+        </div>
+      </div>
+    </div>
+  </section>
+<hr>
 
 <!-- NEWSLETTER End -->
 
